--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/03/16</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N. (10 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat bound for Greece capsized off coast of Turkey with 10 children aboard</b><br>Source: HurriyetDN/AA/AP/Independent<br>
+Found dead: <b>23/05/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards in province of Idlib (TR) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
