--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/06/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Farhan al-Hwaish (man, 22)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died in Tisza River (HU) after being attacked by police while trying to enter Hungary from Serbia</b><br>Source: Reu./LeCourrierdesBalkans<br>
+Found dead: <b>12/01/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>found dead by fishermen near Mostaganem (DZ); went missing after trying to cross to Spain</b><br>Source: IOM<br>
 
 <br>
 
