--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/01/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 23)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>found dead by fishermen near Mostaganem (DZ); went missing after trying to cross to Spain</b><br>Source: IOM<br>
+Found dead: <b>15/03/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sharif Hussein Ahmed (man)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>suicide, in Graz (AT), refused right to reside in Austria after winning European Court of Human Rights case</b><br>Source: MNS/UNHCR<br>
 
 <br>
 
