--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank near Foca (TR); 6 rescued</b><br>Source: Imkander<br>
+Found dead: <b>Aug 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young woman)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>died before or after smugglers threw her into the Adriatic Sea near Brindisi (IT)</b><br>Source: IRR/GiulianoNewsChronicle<br>
 
 <br>
 
