--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young woman)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>died before or after smugglers threw her into the Adriatic Sea near Brindisi (IT)</b><br>Source: IRR/GiulianoNewsChronicle<br>
+Found dead: <b>01/06/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hasan Akdag (man, 21)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>suicide, set himself on fire in detention centre in Lingen (DE) after second asylum application was rejected</b><br>Source: FR-NieSa/MNS/Morgengr./ZAG<br>
 
 <br>
 
