--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/03/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, body found on shore of Tripoli (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>10/09/05</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>bodies found on Licata Beach (IT), with 7 Egyptian traffickers caught; 149 survivors</b><br>Source: LR/VK<br>
 
 <br>
 
