--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/10/97</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>reportedly drowned near Tarifa (ES) while travelling to Spain</b><br>Source: EP/MNS/ST<br>
+Found dead: <b>15/08/10</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>died of dehydration in desert near Tamanrasset (DZ), with 12 others trying to reach Europe</b><br>Source: AFP/FocusNews/AllWAfrica<br>
 
 <br>
 
