--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/11/11</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Pakistan</b><br>Cause of death: <b>bodies found in Port of Brindisi (IT) after vessel sank nearby</b><br>Source: MNS<br>
+Found dead: <b>20/03/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sezgin Sayan (man, 24)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>blown up in minefield near the Evros River (GR) trying to cross Turkish-Greek border</b><br>Source: MNS/Vivre/HRFT/AP<br>
 
 <br>
 
