--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/12/08</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 woman; 3 men)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>drowned after dinghy sank near Ayvalik (TR); 23 survivors</b><br>Source: KI/FE/PICUM/NOB<br>
+Found dead: <b>Jul 07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after dinghy collided with fishing boat 80 miles from Libya on way to Italy</b><br>Source: LR<br>
 
 <br>
 
