--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat sank between Libya and Italy; 2-year-old son missing, husband and 3 children survived</b><br>Source: SP<br>
+Found dead: <b>07/01/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>shot by police while trying to enter the Spanish enclave of Melilla (ES)</b><br>Source: ELM<br>
 
 <br>
 
