--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/02/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>shot by border police while climbing fence between Morocco and the Spanish enclave of Ceuta (ES)</b><br>Source: Médecins Sans Frontières<br>
+Found dead: <b>19/09/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>found dead on boat off coast of Libya; 4500 rescued</b><br>Source: MNS<br>
 
 <br>
 
