--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 27)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaway, suffocated in suitcase stored in trunk of car travelling from Melilla (ES) to Almería (ES)</b><br>Source: BBC/SP/Welt<br>
+Found dead: <b>25/12/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Anpalagan Ganeshu (17)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>drowned near Malta after Greek captain intentionally sank vessel carrying refugees</b><br>Source: MNS<br>
 
 <br>
 
