--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/10/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, ±30)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>stowaways, suffocated in cargo ship travelling from Ivory Coast to La Coruña (ES)</b><br>Source: MNS<br>
+Found dead: <b>28/01/12</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaways, died in car accident while hidden in truck travelling from Italy to Greece</b><br>Source: AFP<br>
 
 <br>
 
