--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/10/10</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men, 18-36)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>missing, feared drowned, sailing with 30 survivors rescued off coast of Mostaganem (DZ)</b><br>Source: FE/Swiss.ch<br>
+Found dead: <b>22/08/05</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after shipwreck on way from Anjouan (KM) to Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
