--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/08/05</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after shipwreck on way from Anjouan (KM) to Mayotte (FR)</b><br>Source: Mayotte sans frontières<br>
+Found dead: <b>10/12/04</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat carrying 17 people sank off coast of Samos (GR)</b><br>Source: MNS/NOB<br>
 
 <br>
 
