--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mehretab Kidane (man, 28)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>suicide, hanged himself on day of final asylum appeal hearing in London (GB)</b><br>Source: IRR/INexile/CARF/NCRM/NCADC<br>
+Found dead: <b>23/04/15</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (±25)</b><br>Region of origin: <b>Somalia, Afghanistan</b><br>Cause of death: <b>killed by train near Veles (MK) while walking on narrow mountain pass to Hungary</b><br>Source: VK/MNS/ZEIT<br>
 
 <br>
 
