--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/07/07</b><br>Number of person: <b>42</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>2 drowned after 2 boats sank on way from Western Sahara to Canary Islands (ES); 40 missing</b><br>Source: FE<br>
+Found dead: <b>Mar 03</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>bodies found in tourist area of Costa Teguise, Lanzarote (ES)</b><br>Source: SOS<br>
 
 <br>
 
