--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/11/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Delroy Edwards (man, 43)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>murdered in Kingston (JM) 9 days after deportation from Great Britain</b><br>Source: IRR/WIKI<br>
+Found dead: <b>Sep 99</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned near Cádiz (ES) while reportedly trying to reach Spain by boat</b><br>Source: MNS<br>
 
 <br>
 
