--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/02/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 2)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>died at asylum centre in Waddingxveen (NL) following insufficient medical care</b><br>Source: MNS<br>
+Found dead: <b>26/06/17</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards in province of Idlib (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
