--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sekou Omar Balde (man)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>drowned after boat carrying passengers from Kolda region (SN) was shipwrecked off coast of Morocco</b><br>Source: Book:LosInvisiblesDeKolda/MUGAK/ELM/FE<br>
+Found dead: <b>29/06/09</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (1 child; 3 women; 5 men)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after wooden boat hit rocks near Barbate (ES), traffickers were later imprisoned for murder</b><br>Source: PICUM/SUR/Publico/EP/Verdad/DiarioVasco/MNS<br>
 
 <br>
 
