--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jul 98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sofonias Alemseged (man, 22)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>suicide, hanged himself in Brixton Prison (GB), asylum seeker</b><br>Source: IRR/CARF/NCRM/NCADC<br>
+Found dead: <b>22/02/06</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of hypothermia, starvation and epilepsy in the Alboran Sea while travelling to Spain</b><br>Source: AFVIC<br>
 
 <br>
 
