--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/05/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nouredine El Amrani (man, 26)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>suicide, in detention centre in Kronach (DE) after 2 years of detention</b><br>Source: taz/ZAG<br>
+Found dead: <b>03/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>A. Yhan (man, 25)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>suicide, hanged himself with a phone cord, fearing deportation after asylum application was rejected in France</b><br>Source: IRR/Libération<br>
 
 <br>
 
