--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/09/06</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 drowned in shipwreck approximately 115 miles from southwest Malta on way to Italy; 12 missing</b><br>Source: FE/LR/MM/NOB/Unipa<br>
+Found dead: <b>02/01/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>died of smoke inhalation following arson attack at police station in Málaga (ES)</b><br>Source: MNS/MUGAK/APDHA<br>
 
 <br>
 
