--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/10/09</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Egypt, Somalia</b><br>Cause of death: <b>4 drowned trying to swim alongside a dinghy off coast of Gela (IT); 3 missing</b><br>Source: PICUM/EveryOne Group/NOB<br>
+Found dead: <b>12/10/94</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>missing after 2 boats capsized in the Otranto Channel (IT)</b><br>Source: MNS/FECL/TL<br>
 
 <br>
 
