--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/01/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>froze to death, body found in Nea Vissa (GR) near Turkish border</b><br>Source: ClandestinE/Frontexplode<br>
+Found dead: <b>28/10/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found near Licata (IT)</b><br>Source: LR/Unipa<br>
 
 <br>
 
