--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, body found near Habibas Islands off coast of Ain Témouchent (DZ)</b><br>Source: Réf/DK/OuestT/IOM<br>
+Found dead: <b>30/06/17</b><br>Number of person: <b>60</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned at unspecified location between Libya and Italy; 80 survivors</b><br>Source: IOM Italy<br>
 
 <br>
 
