--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2009</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N. (mostly children)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died in a fire in unsafe building in Paris (FR), inhabited by many immigrants with no other choice of accommodation</b><br>Source: SurprisingE<br>
+Found dead: <b>14/02/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fata Abdul (man, 23)</b><br>Region of origin: <b>Yemen</b><br>Cause of death: <b>suicide, hanged himself with t-shirt at detention centre in Thessaloniki (GR)</b><br>Source: KI/aida/IRR<br>
 
 <br>
 
