--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/09/06</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (3 children; 4 women; 10 men)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of starvation on ship drifting between Libya and Italy</b><br>Source: FE/agrigentoweb<br>
+Found dead: <b>11/11/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>Maden (3 children; 1 woman)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>2 found dead on beach of Lesbos (GR), family of teacher fleeing persecution in Turkey; 2 missing</b><br>Source: GulfToday/RTBF/TurkeyPurge/IOM/HelCoastG<br>
 
 <br>
 
