--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hashim Yasbek (man, 34)</b><br>Region of origin: <b>Lebanon</b><br>Cause of death: <b>died of heroin overdose in asylum centre in Schonefeld Ost (DE); body found 6 weeks later</b><br>Source: Karawane/MDR<br>
+Found dead: <b>29/07/06</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (7 children; 5 women; 5 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>17 drowned in shipwreck near coast of Malta; 12 rescued by Italian vessel</b><br>Source: MNS/LR/FE/IPL/ST/NOB/MM/Unipa<br>
 
 <br>
 
