--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/07/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samba Fofana (25)</b><br>Region of origin: <b>Kenya</b><br>Cause of death: <b>died of 2 consecutive heart attacks in police station in Fuerteventura (ES)</b><br>Source: ST/IRR<br>
+Found dead: <b>15/09/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 child, 3; 1 woman; 1 man)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>found dead on rubber dinghy during rescue operation 44 km off coast of Tripoli (LY); 139 rescued</b><br>Source: DefenceForcesIRL/IOM/RCItaly<br>
 
 <br>
 
