--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/01/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>died in the Strait of Gibraltar after waiting 4 days for dinghy to Spain</b><br>Source: Humano<br>
+Found dead: <b>05/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>died in explosion in minefield at Turkish-Greek border; 4 Palestinians and 2 Moroccans survived</b><br>Source: Ya.N<br>
 
 <br>
 
