--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/09/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tema Kombe (man, 32)</b><br>Region of origin: <b>Uganda</b><br>Cause of death: <b>suicide, hanged himself in bathroom of psychiatric ward at Heatherwood Hospital (GB)</b><br>Source: icB/IRR/NCADC<br>
+Found dead: <b>06/04/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (30)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>fell off cliff while fleeing Spanish Guardia Civil near Tarifa (ES)</b><br>Source: MNS/MUGAK/EP<br>
 
 <br>
 
