--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/04/08</b><br>Number of person: <b>36</b><br>Name, gender, age: <b>N.N. (4 babies; 2 women)</b><br>Region of origin: <b>Nigeria, Cameroon</b><br>Cause of death: <b>drowned after Moroccan police punctured rubber dinghy with knife off coast of Morocco</b><br>Source: FE/Welt/ST/MNS/PICUM/Reu./APDHA/MB/BBC<br>
+Found dead: <b>05/05/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sulko Yenci (25)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after small boat collided with coast guards near Otranto (IT)</b><br>Source: taz/GiulianoNewsChronicle/AFP/IRR<br>
 
 <br>
 
