--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tusara Fernando</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/DAZ/Budapestsun/ZAG<br>
+Found dead: <b>04/12/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Mauritania</b><br>Cause of death: <b>drowned when boat carrying 29 migrants to Greece sank off western coast of Turkey</b><br>Source: TDN/FE/PR<br>
 
 <br>
 
