--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2003</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Olivier (man, ±20)</b><br>Region of origin: <b>Niger</b><br>Cause of death: <b>died eating money he had saved for smugglers in order to avoid robbery at military checkpoint in Agadez (NE)</b><br>Source: LESP<br>
+Found dead: <b>01/10/99</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (3 women; 3 men)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>stowaways, found suffocated in ship registered to Cyprus in harbour in Seville (ES)</b><br>Source: MNS/MUGAK<br>
 
 <br>
 
