--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rexhep Salijaj (man)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>suicide, when his permit to stay in Belgium expired, was to be deported to Kosovo away from son and family</b><br>Source: MNS<br>
+Found dead: <b>Apr 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Glynnis Cowley (woman, 40)</b><br>Region of origin: <b>South Africa</b><br>Cause of death: <b>suicide, in Liverpool (GB) after her asylum claim was rejected, mother of 3 children</b><br>Source: IRR/CARF/NCADC<br>
 
 <br>
 
