--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Peru</b><br>Cause of death: <b>hit by train in the French Alps near Menton (FR) while walking on tracks to Italy</b><br>Source: Libération/MNS<br>
+Found dead: <b>15/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>shot dead by border police in Sredets (BG) near Turkish-Bulgarian border</b><br>Source: Reu./Novinite/VOA<br>
 
 <br>
 
