--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/08/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jasraj Singh Kataria (23 months)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>fell from 3rd floor window of poor accommodation in Glasgow (GB) provided by government contractor</b><br>Source: IRR<br>
+Found dead: <b>16/10/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 26)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>stowaway, hit by bumper of truck he was hidden in near La Jonquera (ES) on border with France</b><br>Source: DiariGirona/IOM<br>
 
 <br>
 
