--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Youcef (man, 25)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>body found in Bethioua Harbour (DZ) after trying to reach Europe by boat</b><br>Source: QUOTI/NOB<br>
+Found dead: <b>Dec 06</b><br>Number of person: <b>50</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation on boat that landed in Yoff (SN) after trying to reach Spain</b><br>Source: MNS/APDHA<br>
 
 <br>
 
