--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>tortured by Turkish border guards near Al-Malikiyah (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
+Found dead: <b>2003</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Olivier (man, ±20)</b><br>Region of origin: <b>Niger</b><br>Cause of death: <b>died eating money he had saved for smugglers in order to avoid robbery at military checkpoint in Agadez (NE)</b><br>Source: LESP<br>
 
 <br>
 
