--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/03/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khaled Abuzarifeh (man, 27)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>suffocated after being gagged by police during deportation from Zürich Airport (CH)</b><br>Source: ST/Morgengr./Pressesp. Rassis./IRR/MNS/AI/AFP<br>
+Found dead: <b>19/08/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation and hypothermia, body found on boat that went adrift for 7 days on way to Spain</b><br>Source: MUGAK/DiariodeNavarra/LV/PerCat/ABC/SUR<br>
 
 <br>
 
